# poGL

./: CMakeLists.txt
src/: game.c  game.h  main.c
src/vladlib/: vladlib.c  vladlib.h  vmath.c  vmath.h
src/vladlib/resources/shaders/: base_shader.frag
src/vladlib/utils/: index_buffer_obj.c  index_buffer_obj.h  shaders.c  shaders.h  vertex_array_object.c  vertex_array_object.h  vertex_buffer_object.c  vertex_buffer_object.h
